--- a/package.json
+++ b/package.json
@@ -51,5 +51,9 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "tailwindcss-animate": "^1.0.6"
   }
 }
