Google auth done

--- a/.env
+++ b/.env
@@ -2,15 +2,15 @@
 # NextAuth.js Configuration
 # ------------------------
 
-NEXTAUTH_SECRET=
-NEXTAUTH_URL=
+NEXTAUTH_SECRET=XfTEhDL6yA
+NEXTAUTH_URL=http://localhost:3000
 
 # ------------------------
 # OAuth Providers
 # ------------------------
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=872877668213-46hensrii4odftr86gu53u8dl1jhql6g.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 # ------------------------
 # Database
